crates/atlas-runtime/tests/snapshots/interpreter__incdec_decrement_name.snap
---
source: crates/atlas-runtime/tests/interpreter.rs
expression: "program.items[0]"
---
Statement:
  Decrement:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    span:
      start: 0
      end: 4
